...
  final TextEditingController bioController;

  @override
  Widget build(BuildContext context) {
    return FlatmatesCard(
      child: TextField(
        key: const Key('profile_bio_input'),
        controller: bioController,
        maxLines: 4,
        decoration: InputDecoration(labelText: locale.bioLabel),
      ),
    );
  }
...
